5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1863_2217.log
== TEST (2019-07-02 11:46:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=rray(eval(input(":")))

print(a[0],a[4],a[9)
-- ERROR:
File "XXXX", line 6
    print(a[0],a[4],a[9)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:46:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=rray(eval(input(":")))

print(a[0],a[4],a[9])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:47:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=qaay(eval(input(":")))

print(a[0],a[4],a[9])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:47:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array(eval(input(":")))

print(a[0],a[4],a[9])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:49:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

a=array([[0,1,1],[1,0,1],[1,1,0]])

print(a[0],a[4],a[9])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
